# LicenseCurationToolkit

./: 01_overall_system_architecture (1).drawio  01_overall_system_architecture.drawio  02_multi_tool_pipeline (1).drawio  02_multi_tool_pipeline.drawio  CHANGELOG.md  README.md
.claude/: settings.local.json
.github/workflows/: advanced-integrated-workflow.yml
LicenseCurationTool-main/Advanced_License_Curation_Workflow_Plan/: PRESENTATION.md  PRESENTATION_GUIDE.md  QUICK_REFERENCE_CARD.md  README.md  SETUP_SUMMARY.md  WORKFLOW_DIAGRAMS.md  advanced-license-curation-workflow.pptx
LicenseCurationTool-main/License_Curation/: AZURE_OPENAI_SETUP.md  CLAUDE.md  CURATION_REPORTS.md  DOCUMENTATION_UPDATE_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md  README_NEW_FEATURES.md  WORKFLOW_DIAGRAM.md  a.sh  action_ort_llm_workflow_deploy.yml  ai_missing_licenses_analyzer.py  ai_multilayer_resolution.py  enhanced-license-curation.md  enhanced-ort-workflow.yml  enhanced_ai_curation.py  extract_uncertain_packages.py  fetch_pypi_licenses.py  generate-dashboard.yml  generate_landing_page.py  generate_license_comparison.py  generate_scancode_reports.py  manage_curations.py  merge_scancode_to_spdx.py  ort-workflow-documentation.md  ort_curation_script_html.py  test_azure_openai.bat  test_azure_openai.py
conanx_package/: MANIFEST.in  PACKAGE_STRUCTURE.md  QUICKSTART.md  README.md  build.bat  test_install.py
conanx_package/conanx/: __init__.py  __main__.py  (+1 more)
sample_conanx_package/: .gitignore  LICENSE  PUBLISHING_GUIDE.md  build.sh  pyproject.toml
workflow_components/: NEW_FEATURES_SUMMARY.md  README.md  requirements.txt
(+56 files in other folders)
