[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conanx"
version = "1.0.0"
description = "A comprehensive CLI tool for automating Conan 2.0 package creation, upload, download, and management with Artifactory support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "arkawick", email = "arkahelios300@gmail.com"}
]
keywords = ["conan", "package-manager", "c++", "artifactory", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "conan>=2.0.0",
    "click>=8.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/arkawick/conanx"
Documentation = "https://github.com/arkawick/conanx#readme"
Repository = "https://github.com/arkawick/conanx.git"
Issues = "https://github.com/arkawick/conanx/issues"

[project.scripts]
conanx = "conanx.cli:main"

[tool.setuptools]
packages = ["conanx"]

[tool.setuptools.package-data]
conanx = ["*.txt", "*.md"]
